--- a/trunk/web/WEB-INF/classes/pdf_templates.properties
+++ b/trunk/web/WEB-INF/classes/pdf_templates.properties
@@ -2,6 +2,10 @@ cheque_return = The Cheque/DD No: %s dated %s for INR %s is returned herewith fo
 
 inward_ack_without_letter_with_amount = This is to acknowledge that we have received your %s No. %s Dated %s, amounting to %s (INR) for subscription Fee. This acknowledgment is subject to the realization of your %s.
 
+inward_ack_without_letter_with_amount_bank_transfer = This is to acknowledge that we have received your %s No. %s Dated %s, amounting to %s (INR) for subscription Fee.
+
+inward_ack_with_letter_with_amount_bank_transfer = With reference to your letter %s dated %s. It is to acknowledge that we have received your %s No. %s Dated %s, amounting to %s (INR) for subscription Fee.
+
 inward_ack_with_letter_with_amount = With reference to your letter %s dated %s. It is to acknowledge that we have received your %s No. %s Dated %s, amounting to %s (INR) for subscription Fee. This acknowledgment is subject to the realization of your %s.
 
 inward_ack_without_letter_no_amount = This is to acknowledge your request for '%s'.
