--- a/web/WEB-INF/classes/jds_reminders.properties
+++ b/web/WEB-INF/classes/jds_reminders.properties
@@ -15,10 +15,8 @@ reminderType1   = Dear Sir(s),\n \
                 Thanking you in anticipation,\n \
                 Yours Sincerely,\n \n \
                 For Circulation Department.\n \
-                EMail:orders@ias.ernet.in\n \
-                ****************************\n \
-                PLEASE ALWAYS QUOTE THE ABOVE MENTIONED SUB. NO. IN ALL CORRESPONDENCE CLAIMS, ETC.\n \
-                ****************************
+                EMail:orders@ias.ernet.in
+
 
 reminderType2   = Dear Subscriber, \n \
                 Please refer to our Invoice towards the supply of the journals mentioned above. We are sorry that in spite of repeated reminders our bill remains unpaid till now. However, we have mailed all the issues AS ON DATE in anticipation of payment. \n \
@@ -26,10 +24,7 @@ reminderType2   = Dear Subscriber, \n \
                 Thanking you,\n \
                 Yours Sincerely,\n \n \
                 For Circulation Department.\n \
-                EMail:orders@ias.ernet.in\n \
-                ****************************\n \
-                PLEASE ALWAYS QUOTE THE ABOVE MENTIONED SUB. NO. IN ALL CORRESPONDENCE CLAIMS, ETC.\n \
-                ****************************
+                EMail:orders@ias.ernet.in
 
 reminderType3   = Dear Subscriber, \n \
                 Please refer to our Invoice towards the supply of the journals \n \
@@ -41,7 +36,4 @@ reminderType3   = Dear Subscriber, \n \
                 Thanking you,\n \
                 Yours Sincerely,\n \
                 For Circulation Department.\n \
-                EMail:orders@ias.ernet.in\n \
-                ****************************\n \
-                PLEASE ALWAYS QUOTE THE ABOVE MENTIONED SUB. NO. IN ALL CORRESPONDENCE CLAIMS, ETC.\n \
-                ****************************
+                EMail:orders@ias.ernet.in
