--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -480,7 +480,7 @@ invalidate_inward = UPDATE inward \
 
 update_cheque_return =  update inward set \
                         chequeDDReturn = ?, chequeDDReturnReason = (select id from inward_return_reasons where return_reason=?), \
-                        chequeDDReturnReasonOther = ? , returnDate = ? where inwardNumber = ?
+                        chequeDDReturnReasonOther = ? , returnDate = ?, amount=0 where inwardNumber = ?
 
 update_cheque_return_details = INSERT INTO chq_return_details \
                                 SET return_reason_id = \
@@ -588,9 +588,8 @@ subscriber_insert = INSERT INTO subscriber(subscriberNumber, \
                               WHERE agentName = ?), \
                             ?)
 
-get_last_subscriber = SELECT IFNULL(MAX(subscriberNumber), 0) FROM subscriber
-#SELECT subscriberNumber,subscriberCreationDate FROM subscriber where YEAR(subscriberCreationDate)=YEAR(CURDATE()) ORDER BY id DESC LIMIT 1
-
+# the subscriber numbers in the legacy data range from 1 to 40000 so we start from 50K
+get_last_subscriber = SELECT subscribernumber FROM subscriber WHERE subscribernumber > 50000 ORDER BY id DESC LIMIT 1
 
 get_subscriber_by_number = select t1.id as subscriberID \
                       ,t1.subscriberNumber\
