--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -589,7 +589,7 @@ subscriber_insert = INSERT INTO subscriber(subscriberNumber, \
                             ?)
 
 # the subscriber numbers in the legacy data range from 1 to 40000 so we start from 50K
-get_last_subscriber = SELECT subscribernumber FROM subscriber WHERE subscribernumber > 50000 ORDER BY id DESC LIMIT 1
+get_last_subscriber = SELECT subscribernumber FROM subscriber WHERE subscribernumber >= 50000 ORDER BY id DESC LIMIT 1
 
 get_subscriber_by_number = select t1.id as subscriberID \
                       ,t1.subscriberNumber\
