--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,14 +55,14 @@ file.reference.commons-dbutils-1.4.jar=lib/commons-dbutils-1.4.jar
 file.reference.commons-fileupload-1.2.2.jar=lib/commons-fileupload-1.2.2.jar
 file.reference.commons-io-2.4.jar=lib/commons-io-2.4.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
-file.reference.gson-2.2.4.jar=lib\\gson-2.2.4.jar
+file.reference.gson-2.2.4.jar=lib/gson-2.2.4.jar
 file.reference.itext-xtra-5.2.1-javadoc.jar=lib/itext-5.2.1/itext-xtra-5.2.1-javadoc.jar
 file.reference.itext-xtra-5.2.1-sources.jar=lib/itext-5.2.1/itext-xtra-5.2.1-sources.jar
 file.reference.itext-xtra-5.2.1.jar=lib/itext-5.2.1/itext-xtra-5.2.1.jar
 file.reference.itextpdf-5.2.1-javadoc.jar=lib/itext-5.2.1/itextpdf-5.2.1-javadoc.jar
 file.reference.itextpdf-5.2.1-sources.jar=lib/itext-5.2.1/itextpdf-5.2.1-sources.jar
 file.reference.itextpdf-5.2.1.jar=lib/itext-5.2.1/itextpdf-5.2.1.jar
-file.reference.json-simple-1.1.1.jar=lib\\json-simple-1.1.1.jar
+file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.jstl-api-1.2.jar=lib/jstl-api-1.2.jar
 file.reference.jstl-impl-1.2.jar=lib/jstl-impl-1.2.jar
 file.reference.jxl.jar=lib/jxl.jar
@@ -152,7 +152,7 @@ source.root=src
 src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
-war.ear.name=JDS.war
-war.name=evitaran.war
+war.ear.name=evitaran2.0.war
+war.name=evitaran2.0.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
