--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -1857,7 +1857,7 @@ insert_rem = INSERT INTO reminders(subscriptionId, balance, reminderType, remind
 
 
 gen_reminders_subscriber =  select subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
-                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, DATE_FORMAT(reminders.reminderDate,'%d/%m/%Y') as reminderDate, \
                                 subscriber.email, reminders.id \
                                 from reminders, subscription, \
                                 subscriber, subscriber_type \
@@ -1867,7 +1867,7 @@ gen_reminders_subscriber =  select subscription.id as subId, subscriber_type.sub
                                 and reminders.reminderType = ?
 
 get_reminders_subscriber =  select subscriber.id, subscription.id as subId, subscriber_type.subtypecode, subscriber.subscriberNumber, \
-                                subscriber.subscriberName, reminders.balance, reminders.reminderType, reminders.reminderDate, \
+                                subscriber.subscriberName, reminders.balance, reminders.reminderType, DATE_FORMAT(reminders.reminderDate,'%d/%m/%Y') as reminderDate, \
                                  subscriber.department, subscriber.institution, subscriber.shippingAddress, \
                                 cities.city, districts.district, states.state, countries.country, subscriber.pincode, \
                                 subscriber.email, reminders.id, inward.letterNumber, inward.letterDate, subscriber.invoiceAddress, \
