--- a/web/WEB-INF/classes/jds_reminders.properties
+++ b/web/WEB-INF/classes/jds_reminders.properties
@@ -26,12 +26,8 @@ reminderType2   = Dear Subscriber, \n \
                 EMail:orders@ias.ernet.in
 
 reminderType3   = Dear Subscriber, \n \
-                Please refer to our Invoice towards the supply of the journals \n \
-                mentioned above. We are sorry that in spite of repeated reminders \n \
-                our bill remains unpaid till now. However, we have mailed all \n \
-                the issues AS ON DATE in anticipation of payment. \n \
-                We solicit your kind co-operation in settlement of our bill \n \
-                immediately.\n \n \
+                Please refer to our Invoice towards the supply of the journals mentioned above. We are sorry that in spite of repeated reminders our bill remains unpaid till now. However, we have mailed all the issues AS ON DATE in anticipation of payment. \n \
+                We solicit your kind co-operation in settlement of our bill immediately. \n \n \
                 Thanking you,\n \n \
                 Yours Sincerely,\n \
                 For Circulation Department.\n \
