--- a/trunk/src/java/properties/jds_sql.properties
+++ b/trunk/src/java/properties/jds_sql.properties
@@ -536,9 +536,14 @@ print_email_chq_return = SELECT t3.subscriberNumber as subscriberId, \
                                 AND t2.inwardNumber = ? \
                                 AND t1.chq_no = ?
 
-get_subscription_for_inward = SELECT t1.id as subscriptionID \
-                                FROM subscription t1, inward t2 \
-                               WHERE t1.inwardID = t2.id AND t2.id = ?
+get_subscription_for_inward = SELECT t1.id as subscriptionID, \
+                                     t3.subscriberNumber \
+                                FROM subscription t1, \
+                                     inward t2, \
+                                     subscriber t3 \
+                               WHERE t1.inwardID = t2.id \
+                                    AND t1.subscriberID = t3.id \
+                                    AND t2.inwardNumber = ?
 
 update_subscriber_in_inward = update inward set subscriberId = ? where inwardNumber = ?
 
@@ -985,6 +990,35 @@ get_subscription_details_for_inward = SELECT t1.id AS subscriptionid, \
                                               t4.journalName, \
                                               t2.startYear, \
                                               t2.endYear
+
+get_subscription_details_for_subscription = SELECT t1.id AS subscriptionid, \
+                                                t4.journalName, \
+                                                t2.startYear, \
+                                                t2.endYear, \
+                                                t2.copies, \
+                                                t2.startMonth, \
+                                                t6.period, \
+                                                t6.rate, \
+                                                t2.journalGroupID, \
+                                                (t2.copies * t6.rate) as total, \
+                                                t2.endMonth \
+                                           FROM subscription t1, \
+                                                subscriptiondetails t2, \
+                                                journal_group_contents t3, \
+                                                journals t4, \
+                                                subscription_rates t6 \
+                                          WHERE     t1.active = TRUE \
+                                                AND t2.active = TRUE \
+                                                AND t1.id = t2.subscriptionID \
+                                                AND t2.journalGroupID = t3.journalGroupID \
+                                                AND t3.journalID = t4.id \
+                                                AND t2.journalPriceGroupID = t6.id \
+                                                AND t1.id = ? \
+                                         GROUP BY subscriptionid, \
+                                                  t2.journalGroupID, \
+                                                  t4.journalName, \
+                                                  t2.startYear, \
+                                                  t2.endYear
 
 update_subscription_detail =    UPDATE subscriptiondetails \
                                     SET startYear = ?, \
